<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnaliticsActivity"
    android:background="@drawable/background44"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/AnalLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/bar3"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textSize="50sp"
        android:text="@string/TrainTV1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/bar3"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/TrainTV2" />

    <EditText
        android:id="@+id/EtRast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/shapeedittext"
        android:gravity="center"
        android:hint="@string/TrainET1"
        android:inputType="number"
        android:paddingVertical="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/bar3"
        android:textColorHint="@color/bar3"
        android:textSize="25sp" />
    <EditText
        android:background="@drawable/shapeedittext"
        android:id="@+id/EtPris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:textSize="25sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingVertical="3dp"
        android:gravity="center"
        android:textColor="@color/bar3"
        android:textColorHint="@color/bar3"
        android:hint="@string/TrainET2" />



    <Button
        android:id="@+id/AnalBtn"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:background="@drawable/buttonoshape"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/TrainBT"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bar3"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/Progress"
        android:layout_weight="1" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar3"
        android:progressDrawable="@drawable/progressbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:progress="65"
        android:layout_weight="0.5" />

</LinearLayout>
