<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context=".MenuActivity">


    <TextView
        android:id="@+id/MenuLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonfshape"
            android:onClick="goToAnal"
            android:text="@string/MenuBT2"
            android:textColor="@color/bar3"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonfshape"
            android:onClick="goToTraining"
            android:text="@string/MenuBT1"
            android:textColor="@color/bar3"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonfshape"
            android:onClick="goToSet"
            android:text="@string/MenuBT4"
            android:textColor="@color/bar3"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonfshape"
            android:onClick="goToQuestion"
            android:text="@string/MenuBT3"
            android:textColor="@color/bar3"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/MenuTextBot"
        android:textColor="@color/bar3"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/bar3"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:text="@string/Progress" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:progressDrawable="@drawable/progressbar"
        android:progress="60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>