<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity"
    android:background="@drawable/background1">

    <TextView
        android:id="@+id/DataTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_margin="15dp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:textColor="@color/bar3"
        android:text="@string/DataTextView1" />

    <EditText
        android:background="@drawable/shapeedittext"
        android:id="@+id/EtDataName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="text"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingVertical="3dp"
        android:gravity="center|start"
        android:textColor="@color/white"
        android:textColorHint="@color/bar3"
        android:hint="@string/EditTextHintButton1" />

    <EditText
        android:background="@drawable/shapeedittext"
        android:id="@+id/EtDataWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingVertical="3dp"
        android:gravity="center|start"
        android:textColor="@color/white"
        android:textColorHint="@color/bar3"
        android:hint="@string/EditTextHintButton3" />

    <EditText
        android:background="@drawable/shapeedittext"
        android:id="@+id/EtDataHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="5dp"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingVertical="3dp"
        android:gravity="center|start"
        android:textColor="@color/white"
        android:textColorHint="@color/bar3"
        android:hint="@string/EditTextHintButton2" />



    <Button
        android:id="@+id/databutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="130dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/buttonshape"
        android:onClick="onClick"
        android:text="@string/DataButtonText"
        android:textSize="25sp"
        android:textColor="@color/bar3"
        android:textStyle="bold|italic" />

</LinearLayout>