<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:background="@drawable/arrow"
            android:onClick="Btn2"
            android:rotation="90"
            android:scaleX="0.8"
            android:text="" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold|italic"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/logo" />

        <Space
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/qstTv"
        android:textColor="@color/bar3"
        android:textSize="45sp"
        android:textStyle="italic|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/trenerbg"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextQuestion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start|center"
            android:hint="@string/qstHint"
            android:inputType="textMultiLine"
            android:textColor="@color/bar2"
            android:textStyle="italic|bold"
            android:textColorHint="@color/bar3"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/butSend"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/circlebtn"
            android:onClick="onClick"
            android:src="@drawable/playicon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="ИСТОРИЯ ОТВЕТОВ" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/answertheme"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="20dp"
                android:textStyle="italic|bold"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:text="@string/qstHint"
                android:textColor="@color/bar3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic|bold"
                android:textSize="25sp"
                android:paddingLeft="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/bar2"
                android:text="@string/qstOtvet" />

            <TextView
                android:id="@+id/textViewAnswer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:text=""
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>